--- a/oil-palm.ipynb
+++ b/oil-palm.ipynb
@@ -50,9 +50,9 @@
    "source": [
     "#Importing monthly pricing\n",
     "#Check if spreadsheet directory exists\n",
-    "if os.path.exists('/Users/piyak/Documents/ML/'):\n",
-    "    oil_palm_prices = pd.read_csv('/Users/piyak/Documents/ML/jun-palm-price.csv')\n",
-    "else:\n",
+    "try:\n",
+    "    oil_palm_prices = pd.read_csv('/data/jun-palm-price.csv')\n",
+    "except:\n",
     "    raise FileNotFoundError"
    ]
   },
@@ -1228,11 +1228,11 @@
     }
    ],
    "source": [
-    "if os.path.exists('/Users/piyak/Documents/ML/'):\n",
-    "    phangnga_prices = pd.read_csv('phangnga-jun-palm-prices.csv',parse_dates=['Date'],dayfirst=True)\n",
+    "try:\n",
+    "    phangnga_prices = pd.read_csv('/data/phangnga-jun-palm-prices.csv',parse_dates=['Date'],dayfirst=True)\n",
     "    phangnga_prices[\"Median price\"] = phangnga_prices[['Min price','Max price']].median(axis=1) #calculate median price from existing columns\n",
     "    \n",
-    "else:\n",
+    "except:\n",
     "    raise FileNotFoundError\n",
     "\n",
     "phangnga_prices.head()"
@@ -1501,9 +1501,9 @@
     }
    ],
    "source": [
-    "if os.path.exists('/Users/piyak/Documents/ML/'):\n",
-    "    predicted_prices = pd.read_csv('/Users/piyak/Documents/ML/palm-price-sarima.csv',parse_dates=['Date'],dayfirst=True)\n",
-    "else:\n",
+    "try:\n",
+    "    predicted_prices = pd.read_csv('/data/palm-price-sarima.csv',parse_dates=['Date'],dayfirst=True)\n",
+    "except:\n",
     "    raise FileNotFoundError\n",
     "predicted_prices.head()"
    ]
