--- a/oil-palm.ipynb
+++ b/oil-palm.ipynb
@@ -1,25 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Import main packages\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt \n",
-    "import seaborn as sns\n",
-    "import os"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Context\n",
-    "This project was conducted for a relatively small palm oil plantation in the southern region of Thailand. The plantation reportedly performed unusually worse in 2023, despite maintaining a profitable record and consistent yields.<br>\n",
+    "This project was conducted for a 16 hectare palm oil plantation in the southern region of Thailand. The plantation reportedly performed unusually worse in 2023, despite maintaining a profitable record and consistent yields.<br>\n",
     "Thus, this notebook was created in part to provide quantitative evidence that something was wrong with the financial report, but also to highlight potential opportunities for improving key performance indicators (KPIs), primarily production yield when compared to industry standards. <br>\n",
     "\n",
     "**Methodology** <br>\n",
@@ -27,7 +13,7 @@
     "https://www.opsmoac.go.th/phangnga-news-news_release (in Thai)\n",
     "<br>As far as I am aware, the Phang Nga Provincial Agriculture and Cooperatives Office (PPACO) provides the most relevant local market prices for the plantation I investigated, as it is located in Phang Nga, though not in the same prefecture. Pricing can vary between prefectures due to the absence of major industrial producers. <br>In this case, locally produced palms are sold to an intermediary company, which is what the plantation did.\n",
     "\n",
-    "To minimise selection bias, I take take the range of prices by selecting a minimum and maximum between two companies across multiple days then calculate the median. <br> If company A contains a higher maximum than company B, take company A maximum. If both companies have the same maximum, take either. For example: \n",
+    "To minimise selection bias, I take the range of prices by selecting a minimum and maximum between two companies across multiple days then calculate the median. \n",
     "<ul><li>If multiple dates were given (28th - 29th April), consider these dates as late April and use the minimum and maximum price within the timeframe. </ul>\n",
     "\n",
     "**Fig1.** and **Fig2.** illustrates on how this was decided. \n",
@@ -44,15 +30,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Import main packages\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt \n",
+    "import seaborn as sns\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Importing monthly pricing\n",
     "#Check if spreadsheet directory exists\n",
-    "try:\n",
-    "    oil_palm_prices = pd.read_csv('/data/jun-palm-price.csv')\n",
-    "except:\n",
+    "if os.path.exists('/Users/piyak/Documents/ML/'):\n",
+    "    oil_palm_prices = pd.read_csv('/Users/piyak/Documents/ML/jun-palm-price.csv')\n",
+    "else:\n",
     "    raise FileNotFoundError"
    ]
   },
@@ -1228,11 +1228,11 @@
     }
    ],
    "source": [
-    "try:\n",
-    "    phangnga_prices = pd.read_csv('/data/phangnga-jun-palm-prices.csv',parse_dates=['Date'],dayfirst=True)\n",
+    "if os.path.exists('/Users/piyak/Documents/ML/'):\n",
+    "    phangnga_prices = pd.read_csv('phangnga-jun-palm-prices.csv',parse_dates=['Date'],dayfirst=True)\n",
     "    phangnga_prices[\"Median price\"] = phangnga_prices[['Min price','Max price']].median(axis=1) #calculate median price from existing columns\n",
     "    \n",
-    "except:\n",
+    "else:\n",
     "    raise FileNotFoundError\n",
     "\n",
     "phangnga_prices.head()"
@@ -1318,7 +1318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Autocorrelation plot shows each price point are not correlated, given a CI of 95%. <br>\n",
+    "Autocorrelation plot shows each price point are not correlated (points stay within blue-shaded region), given a CI of 95%. <br>\n",
     "Next, I use a function from stattools to perform an Augmented Dickey-Fuller test to obtain statistics needed for a SARIMA. <br>\n",
     "The justification behind this is to reveal potential seasonal trends in pricing but as mentioned, a 1-year window is not long enough to do so. "
    ]
@@ -1501,9 +1501,9 @@
     }
    ],
    "source": [
-    "try:\n",
-    "    predicted_prices = pd.read_csv('/data/palm-price-sarima.csv',parse_dates=['Date'],dayfirst=True)\n",
-    "except:\n",
+    "if os.path.exists('/Users/piyak/Documents/ML/'):\n",
+    "    predicted_prices = pd.read_csv('/Users/piyak/Documents/ML/palm-price-sarima.csv',parse_dates=['Date'],dayfirst=True)\n",
+    "else:\n",
     "    raise FileNotFoundError\n",
     "predicted_prices.head()"
    ]
@@ -2773,7 +2773,7 @@
     "\n",
     "Interestingly, 2022 had better revenue even in the absence of an irrigation system. One explainable factor was that palm prices in 2022 ranged around 6 - 8 THB/kg, while in 2023 prices dropped to around 4 - 5 THB/kg (<a href=\"https://www.oae.go.th/assets/portals/1/files/price/monthly_price/palm.pdf\">Office of Agriculture Economics; in Thai</a>). This accounts to approximately 50 - 60% difference in earnings and likely reflects 2023's poorer performance. Therefore, with an irrigation system implemented 2022's revenue could have achieved 3 million THB (up from 1.9 million THB).\n",
     "\n",
-    "In addition, addressing other bottlenecks such as harvesting rate and logistics, idiosyncratic to the plantation could achieve even higher yields. "
+    "In addition, by addressing other bottlenecks, such as harvesting methods and logistics — idiosyncratic to the plantation — and complemented by better management, higher yields can be achieved."
    ]
   },
   {
@@ -2901,15 +2901,16 @@
    "source": [
     "# References\n",
     "\n",
-    "Agele, Samuel O., Friday E. Charles, Appolonia E. Obi, Ademola I. Agbona, Samuel O. Agele, Friday E. Charles, Appolonia E. Obi, and Ademola I. Agbona. “Oil Palm-Based Cropping Systems of the Humid Tropics: Addressing Production Sustainability, Resource Efficiency, Food Security and Livelihood Challenges.” In Elaeis Guineensis. IntechOpen, 2022. https://doi.org/10.5772/intechopen.98257.\n",
+    "Agele, Samuel O., Friday E. Charles, Appolonia E. Obi, Ademola I. Agbona, Samuel O. Agele, Friday E. Charles, Appolonia E. Obi, and Ademola I. Agbona. “Oil Palm-Based Cropping Systems of the Humid Tropics: Addressing Production Sustainability, Resource Efficiency, Food Security and Livelihood Challenges.” In Elaeis Guineensis. IntechOpen, 2022. https://doi.org/10.5772/intechopen.98257. <br>**This paper was used to evaluate the benefits of intercropping to reduce soil erosion and improve total productivity.**\n",
     "\n",
-    "Chen, Chunfeng, Xin Zou, Ashutosh Kumar Singh, Xiai Zhu, Wanjun Zhang, Bin Yang, Xiaojin Jiang, and Wenjie Liu. “Effects of Hillslope Position on Soil Water Infiltration and Preferential Flow in Tropical Forest in Southwest China.” Journal of Environmental Management 299 (December 1, 2021): 113672. https://doi.org/10.1016/j.jenvman.2021.113672.\n",
+    "Chen, Chunfeng, Xin Zou, Ashutosh Kumar Singh, Xiai Zhu, Wanjun Zhang, Bin Yang, Xiaojin Jiang, and Wenjie Liu. “Effects of Hillslope Position on Soil Water Infiltration and Preferential Flow in Tropical Forest in Southwest China.” Journal of Environmental Management 299 (December 1, 2021): 113672. https://doi.org/10.1016/j.jenvman.2021.113672. <br>**This study covers background theory relevant to the plantation's locale, giving rise to the idea of creating a basin around the foothill for maximising water and nutrient retention.** \n",
     "\n",
-    "Cerdà, Artemi, and Jesús Rodrigo-Comino. “Is the Hillslope Position Relevant for Runoff and Soil Loss Activation under High Rainfall Conditions in Vineyards?” Ecohydrology & Hydrobiology 20, no. 1 (January 1, 2020): 59–72. https://doi.org/10.1016/j.ecohyd.2019.05.006.\n",
+    "Cerdà, Artemi, and Jesús Rodrigo-Comino. “Is the Hillslope Position Relevant for Runoff and Soil Loss Activation under High Rainfall Conditions in Vineyards?” Ecohydrology & Hydrobiology 20, no. 1 (January 1, 2020): 59–72. https://doi.org/10.1016/j.ecohyd.2019.05.006. <br>**Additional source for evaluating the benefits of intercropping and additional ecological methods to prevent soil erosion in hillslopes.**\n",
     "\n",
-    "Woittiez, Lotte S., Mark T. van Wijk, Maja Slingerland, Meine van Noordwijk, and Ken E. Giller. “Yield Gaps in Oil Palm: A Quantitative Review of Contributing Factors.” European Journal of Agronomy 83 (February 1, 2017): 57–77. https://doi.org/10.1016/j.eja.2016.11.002.\n",
+    "Woittiez, Lotte S., Mark T. van Wijk, Maja Slingerland, Meine van Noordwijk, and Ken E. Giller. “Yield Gaps in Oil Palm: A Quantitative Review of Contributing Factors.” European Journal of Agronomy 83 (February 1, 2017): 57–77. https://doi.org/10.1016/j.eja.2016.11.002. <br> **Points out the typical yield gap for plantations with suboptimal conditions. Highlights several factors contributing to this challenge.**\n",
     "\n",
-    "Carr, M. K. V. “THE WATER RELATIONS AND IRRIGATION REQUIREMENTS OF OIL PALM (ELAEIS GUINEENSIS): A REVIEW.” Experimental Agriculture 47, no. 4 (October 2011): 629–52. https://doi.org/10.1017/S0014479711000494.\n"
+    "Carr, M. K. V. “THE WATER RELATIONS AND IRRIGATION REQUIREMENTS OF OIL PALM (ELAEIS GUINEENSIS): A REVIEW.” Experimental Agriculture 47, no. 4 (October 2011): 629–52. https://doi.org/10.1017/S0014479711000494.\n",
+    "<br> **Discusses water management for oil palms.**"
    ]
   }
  ],
