--- a/oil-palm.ipynb
+++ b/oil-palm.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Context\n",
-    "This project was conducted for a 16 hectare palm oil plantation in the southern region of Thailand. The plantation reportedly performed unusually worse in 2023, despite maintaining a profitable record and consistent yields.<br>\n",
+    "This project was conducted for a palm oil plantation (approximately 100 rai/16 hectares) in the southern region of Thailand. The plantation reportedly performed unusually worse in 2023, despite maintaining a profitable record and consistent yields.<br>\n",
     "Thus, this notebook was created in part to provide quantitative evidence that something was wrong with the financial report, but also to highlight potential opportunities for improving key performance indicators (KPIs), primarily production yield when compared to industry standards. <br>\n",
     "\n",
     "**Methodology** <br>\n",
@@ -50,8 +50,8 @@
    "source": [
     "#Importing monthly pricing\n",
     "#Check if spreadsheet directory exists\n",
-    "if os.path.exists('/Users/piyak/Documents/ML/'):\n",
-    "    oil_palm_prices = pd.read_csv('/Users/piyak/Documents/ML/jun-palm-price.csv')\n",
+    "if os.path.exists('./data'):\n",
+    "    oil_palm_prices = pd.read_csv('jun-palm-price.csv')\n",
     "else:\n",
     "    raise FileNotFoundError"
    ]
@@ -1228,7 +1228,7 @@
     }
    ],
    "source": [
-    "if os.path.exists('/Users/piyak/Documents/ML/'):\n",
+    "if os.path.exists('./data'):\n",
     "    phangnga_prices = pd.read_csv('phangnga-jun-palm-prices.csv',parse_dates=['Date'],dayfirst=True)\n",
     "    phangnga_prices[\"Median price\"] = phangnga_prices[['Min price','Max price']].median(axis=1) #calculate median price from existing columns\n",
     "    \n",
@@ -1501,8 +1501,8 @@
     }
    ],
    "source": [
-    "if os.path.exists('/Users/piyak/Documents/ML/'):\n",
-    "    predicted_prices = pd.read_csv('/Users/piyak/Documents/ML/palm-price-sarima.csv',parse_dates=['Date'],dayfirst=True)\n",
+    "if os.path.exists('data'):\n",
+    "    predicted_prices = pd.read_csv('palm-price-sarima.csv',parse_dates=['Date'],dayfirst=True)\n",
     "else:\n",
     "    raise FileNotFoundError\n",
     "predicted_prices.head()"
